# hack-sound-server-tools

./: README.md  hack-sound-server-tools.gresource.xml  meson.build
com.endlessm.HackSoundServer.PlayerWindow/: com.endlessm.HackSoundServer.PlayerWindow.json.in  meson.build
com.endlessm.HackSoundServer.PlayerWindow/data/: app.desktop.in
com.endlessm.HackSoundServer.PlayerWindow/src/: app.js  com.endlessm.HackSoundServer.PlayerWindow.src.gresource.xml.in  configure.js.in  main.js  meson.build
com.endlessm.HackSoundServer.PlayerWindow/tools/: build-local-flatpak.sh
data/playerwindow/: box.ui  metadata-popover.ui  players-popover.ui  sounds-list-box.ui
js/hacksoundserver/tools/: soundServer.js
js/hacksoundserver/tools/playerwindow/: box.js  metadataPopover.js  misc.js  playerinfo.js  playersPopover.js  soundEvent.js  soundsListBox.js
